# LineCatcher

./: .gitignore  README.md
installer/: Short Description.txt  Thank you.txt  installer.iss
resources/: about.html  gettingstarted.html  scriptdocs.html
scripts/: 10_scanner.lua  11_multiline_scanner.lua  2_read_file.lua  4_search.lua  5_multiline_search.lua  6_read_index.lua  7_create_custom_index.lua  8_nested_comparators.lua  9_text_utilities.lua  multilineSearch.lua  openFile.lua  open_file.lua  read_file.lua  releaseObjects.lua  search.lua  write_file.lua
src/console/: CMakeLists.txt  PLPConsole.cpp
src/core/: CMakeLists.txt  CircularLineBuffer.cpp  CircularLineBuffer.h  Core.cpp  Core.h  CoreI.h  FStreamPagedReader.cpp  FStreamPagedReader.h  FStreamPagedWriter.cpp  FStreamPagedWriter.h  FileLock.cpp  FileLock.h  FilePager.cpp  FilePager.h  FileReader.cpp  FileReader.h  FileReaderI.h  FileSystemManager.cpp  FileSystemManager.h  FileWriter.cpp  FileWriter.h  FileWriterI.h  FrameBuffer.cpp  FrameBuffer.h  GenFileTracker.cpp  GenFileTracker.h  IndexReader.cpp  IndexReader.h  IndexReaderI.h  IndexWriter.cpp  IndexWriter.h  IndexWriterI.h  IndexedLineReader.cpp  IndexedLineReader.h  LineBuffer.cpp  LineBuffer.h  LineParser.cpp  LineParser.h  LineReader.cpp  LineReader.h  (+38 more)
src/ui/PLP/: PLP.pro  aboutdialog.cpp  aboutdialog.h  advancedsearchview.cpp  advancedsearchview.h  common.h  coreobjptr.h  filenavcontrols.cpp  filenavcontrols.h  fileview.cpp  fileview.h  fileview.ui  gettingstarteddialog.cpp  gettingstarteddialog.h  highlightsdialog.cpp  highlightsdialog.h  indexview.cpp  indexview.h  indexviewwidget.cpp  indexviewwidget.h  linenumberarea.h  luasyntaxhighlighter.cpp  luasyntaxhighlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pagedfileviewwidget.cpp  pagedfileviewwidget.h  progressdialog.cpp  progressdialog.h  scriptdocsdialog.cpp  scriptdocsdialog.h  scripteditor.cpp  scripteditor.h  scriptview.cpp  scriptview.h  searchview.cpp  searchview.h  settingsdialog.cpp  (+6 more)
src/ui/build-PLP-Desktop_Qt_5_12_0_MSVC2017_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_fileview.h  ui_mainwindow.h
